/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto2";

package junahan.struts2.protobuf.test;

option java_package="com.junahan.struts2.protobuf.test";
option java_multiple_files = false;
option optimize_for = SPEED;

import "junahan/struts2/protobuf/protocol.proto";

enum TestEnum2 {
    ENUM_VALUE1 = 0;
    ENUM_VALUE2 = 1;
}

message TestMessageA {
    optional int32 int32_field = 1;
    optional TestEnum2 enum_field = 3;
    
    extensions 5000 to max;
}

extend TestMessageA {
    optional string string_field = 5000;
}
